--- a/MockExam/WEB-INF/web.xml
+++ b/MockExam/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <web-app> 
     <servlet> 
          <servlet-name>Exam</servlet-name> 
-         <servlet-class>com.lxisoft.exam.Exam</servlet-class> 
+         <servlet-class>com.lxisoft.control.Exam</servlet-class> 
     </servlet> 
     <servlet-mapping> 
          <servlet-name>Exam</servlet-name> 
@@ -10,7 +10,7 @@
 
     <servlet> 
          <servlet-name>Exam</servlet-name> 
-         <servlet-class>com.lxisoft.exam.Exam</servlet-class> 
+         <servlet-class>com.lxisoft.control.Exam</servlet-class> 
     </servlet> 
     <servlet-mapping> 
          <servlet-name>Exam</servlet-name> 
@@ -19,7 +19,7 @@
 
       <servlet> 
          <servlet-name>Validate</servlet-name> 
-         <servlet-class>com.lxisoft.validate.Validate</servlet-class> 
+         <servlet-class>com.lxisoft.control.Validate</servlet-class> 
     </servlet> 
     <servlet-mapping> 
          <servlet-name>Validate</servlet-name> 
@@ -27,8 +27,8 @@
     </servlet-mapping>
 
      <servlet> 
-         <servlet-name>Validate</servlet-name> 
-         <servlet-class>com.lxisoft.validate.Validate</servlet-class> 
+         <servlet-name>Add</servlet-name> 
+         <servlet-class>com.lxisoft.control.Add</servlet-class> 
     </servlet> 
     <servlet-mapping> 
          <servlet-name>Add</servlet-name> 
