--- a/MockExam/pom.xml
+++ b/MockExam/pom.xml
@@ -37,6 +37,22 @@
 
   </dependencies>
   <build>
+  
+  <plugins>
+  <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <url>http://localhost:8080/manager/text</url>
+                    <server>my-tomcat</server>
+                    <path>/myapp</path>
+                </configuration>
+            </plugin>
+</plugins>
+
+
+  
     <finalName>MockExam</finalName>
   </build>
 </project>
