--- a/MockExam/pom.xml
+++ b/MockExam/pom.xml
@@ -7,7 +7,16 @@
   <version>1.0-SNAPSHOT</version>
   <name>MockExam Maven Webapp</name>
   <url>http://maven.apache.org</url>
+    <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
   <dependencies>
+    <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.19</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -33,36 +42,28 @@
   <build>
     <finalName>MockExam</finalName>
 	<plugins>
-   	<plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>2.3.1</version>
-            
-
-        </plugin>
-         <!-- <plugin>
+         <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
-         </plugin> -->
-          <!-- <plugin>
+         </plugin>
+          <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.2.2</version>
-            </plugin> -->
+            </plugin>
             <plugin>
             <groupId>org.apache.tomcat.maven</groupId>
             <artifactId>tomcat7-maven-plugin</artifactId>
             <version>2.2</version>
-<configuration>
+            <configuration>
+
                 <url>http://localhost:8080/manager/text</url>
               <!-- <server>TomcatServer</server> -->
               <username>admin</username>
               <password>password</password>
               <path>/MockExam</path>
 	         </configuration>
-
-          
         </plugin>
         
 	</plugins>
