--- a/MockExam/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/src/main/webapp/WEB-INF/web.xml
@@ -70,5 +70,30 @@
     <servlet-name>TestServlet</servlet-name>
     <url-pattern>/test/</url-pattern>   
  </servlet-mapping>
+
+    <security-constraint>
+      <web-resource-collection>
+         <web-resource-name>MockExam</web-resource-name>
+         <url-pattern>/Admin.jsp</url-pattern>
+            <http-method>GET</http-method>
+            <http-method>POST</http-method>
+      </web-resource-collection>
+      
+      <auth-constraint>
+         <description>Let only managers use this app</description>
+         <role-name>admin</role-name>
+      </auth-constraint>
+   </security-constraint>
+   
+   <security-role>
+      <role-name>admin</role-name>
+   </security-role>
+   
+   <login-config>
+      <auth-method>FORM</auth-method>
+      <form-login-config>
+         <form-login-page>/Login.jsp</form-login-page>
+      </form-login-config>
+   </login-config>
   
 </web-app>   
