--- a/MockExam/WEB-INF/web.xml
+++ b/MockExam/WEB-INF/web.xml
@@ -43,5 +43,23 @@
          <servlet-name>Display</servlet-name> 
          <url-pattern>/display</url-pattern> 
     </servlet-mapping>
+
+      <servlet> 
+         <servlet-name>Update</servlet-name> 
+         <servlet-class>com.lxisoft.control.Update</servlet-class> 
+    </servlet> 
+    <servlet-mapping> 
+         <servlet-name>Update</servlet-name> 
+         <url-pattern>/update</url-pattern> 
+    </servlet-mapping>
+
+        <servlet> 
+         <servlet-name>Delete</servlet-name> 
+         <servlet-class>com.lxisoft.control.Delete</servlet-class> 
+    </servlet> 
+    <servlet-mapping> 
+         <servlet-name>Delete</servlet-name> 
+         <url-pattern>/delete</url-pattern> 
+    </servlet-mapping>
        
 </web-app>
