--- a/mockexam/src/main/webapp/WEB-INF/web.xml
+++ b/mockexam/src/main/webapp/WEB-INF/web.xml
@@ -58,5 +58,25 @@
 <servlet-mapping>  
 <servlet-name>upd</servlet-name>  
 <url-pattern>/update</url-pattern>  
-</servlet-mapping>   
+</servlet-mapping>  
+<display-name>Tomcat7FormBasedJAAS</display-name>
+  <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>mockexam</web-resource-name>
+      <url-pattern>/AdminMenu.jsp</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>admin</role-name>
+    </auth-constraint>
+  </security-constraint>
+  <security-role>
+    <role-name>admin</role-name>
+  </security-role>
+  <login-config>
+    <auth-method>FORM</auth-method>
+    <form-login-config>
+      <form-login-page>/Login.jsp</form-login-page>
+      <form-error-page>/login_failure.jsp</form-error-page>
+    </form-login-config>
+  </login-config> 
 </web-app>  
