--- a/MockExam/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/src/main/webapp/WEB-INF/web.xml
@@ -71,30 +71,46 @@
     <url-pattern>/test/</url-pattern>   
  </servlet-mapping>
 
+    <security-role>
+      <role-name>admin</role-name>
+    </security-role>
+
+    <security-role>
+      <role-name>user</role-name>
+    </security-role>
+
     <security-constraint>
       <web-resource-collection>
          <web-resource-name>MockExam</web-resource-name>
          <url-pattern>/Admin.jsp</url-pattern>
+            <http-method>GET</http-method>
+            <http-method>POST</http-method>
+      </web-resource-collection>
+      
+      <auth-constraint>
+         <role-name>admin</role-name>
+      </auth-constraint>
+      </security-constraint>
+
+      <security-constraint>
+      <web-resource-collection>
+         <web-resource-name>MockExam</web-resource-name>
          <url-pattern>/Introduction.jsp</url-pattern>
             <http-method>GET</http-method>
             <http-method>POST</http-method>
       </web-resource-collection>
       
       <auth-constraint>
-         <description>Let only managers use this app</description>
-         <role-name>admin</role-name>
+         <role-name>user</role-name>
       </auth-constraint>
-   </security-constraint>
-   
-   <security-role>
-      <role-name>admin</role-name>
-   </security-role>
-   
-   <login-config>
+      </security-constraint>
+
+      <login-config>
       <auth-method>FORM</auth-method>
-      <form-login-config>
-         <form-login-page>/Login.jsp</form-login-page>
-      </form-login-config>
-   </login-config>
-  
+        <form-login-config>
+           <form-login-page>/Login.jsp</form-login-page>
+           <form-error-page>/login_failure.jsp</form-error-page>
+        </form-login-config>
+      </login-config>
+    
 </web-app>   
