--- a/mockexam/pom.xml
+++ b/mockexam/pom.xml
@@ -36,6 +36,35 @@
 
   </dependencies>
   <build>
+   <plugins>
+     <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.0</version>
+                </plugin>
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <url>http://localhost:8080/manager/text</url>
+          <username>admin</username>
+          <password>password</password>
+          <path>mockexam</path>
+        </configuration>
+      </plugin>
+          <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+    </plugins>
     <finalName>mockexam</finalName>
   </build>
 </project>
