http://jira.bytatech.com:8080/browse/IN-7304

--- a/MockExam/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/src/main/webapp/WEB-INF/web.xml
@@ -100,6 +100,8 @@
       
       <auth-constraint>
          <role-name>admin</role-name>
+         <role-name>user</role-name>
+
       </auth-constraint>
       </security-constraint>
 
