--- a/mockexam/src/main/webapp/WEB-INF/web.xml
+++ b/mockexam/src/main/webapp/WEB-INF/web.xml
@@ -66,11 +66,11 @@
       <url-pattern>/AdminMenu.jsp</url-pattern>
     </web-resource-collection>
     <auth-constraint>
-      <role-name>admin</role-name>
+      <role-name>user</role-name>
     </auth-constraint>
   </security-constraint>
   <security-role>
-    <role-name>admin</role-name>
+    <role-name>user</role-name>
   </security-role>
   <login-config>
     <auth-method>FORM</auth-method>
