--- a/mockexam/pom.xml
+++ b/mockexam/pom.xml
@@ -50,7 +50,7 @@
           <url>http://localhost:8080/manager/text</url>
           <username>admin</username>
           <password>password</password>
-          <path>mockexam</path>
+          <path>/mockexam</path>
         </configuration>
       </plugin>
           <plugin>
