--- a/mockexam/src/main/webapp/WEB-INF/web.xml
+++ b/mockexam/src/main/webapp/WEB-INF/web.xml
@@ -66,17 +66,49 @@
       <url-pattern>/AdminMenu.jsp</url-pattern>
     </web-resource-collection>
     <auth-constraint>
+      <role-name>admin</role-name>
+    </auth-constraint>
+  </security-constraint>
+
+  <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>mockexam</web-resource-name>
+      <url-pattern>/page1.jsp</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
       <role-name>user</role-name>
     </auth-constraint>
   </security-constraint>
   <security-role>
+    <role-name>admin</role-name>
     <role-name>user</role-name>
   </security-role>
   <login-config>
     <auth-method>FORM</auth-method>
     <form-login-config>
-      <form-login-page>/Login.jsp</form-login-page>
+      <form-login-page>/page0.jsp</form-login-page>
       <form-error-page>/login_failure.jsp</form-error-page>
     </form-login-config>
   </login-config> 
-</web-app>  
+  <!-- <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>mockexam</web-resource-name>
+      <url-pattern>/page1.jsp</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>user</role-name>
+      <role-name>user1</role-name>
+    </auth-constraint>
+  </security-constraint>
+  <security-role>
+    <role-name>user</role-name>
+    <role-name>user1</role-name>
+  </security-role>
+  <login-config>
+    <auth-method>FORM</auth-method>
+    <form-login-config>
+      <form-login-page>/page0.jsp</form-login-page>
+      <form-error-page>/login_failure1.jsp</form-error-page>
+    </form-login-config>
+  </login-config> 
+</web-app>  --> 
