--- a/MockExam/pom.xml
+++ b/MockExam/pom.xml
@@ -52,13 +52,12 @@
     <artifactId>tomcat7-maven-plugin</artifactId>
     <version>2.2</version>
     <configuration>
-      <url>http://localhost:8080/manager/text</url>1
+      <url>http://localhost:8080/manager/text</url>
       <server>TomcatServer</server>
       <path>/MockExam</path>
     </configuration>
   </plugin>
-</plugins>
-  
+</plugins>  
     
   </build>
 </project>
