--- a/MockExam/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/src/main/webapp/WEB-INF/web.xml
@@ -71,6 +71,16 @@
     <url-pattern>/Register</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>com.lxisoft.Controler.LoginServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/Login</url-pattern>
+  </servlet-mapping>
+
     <security-role>
       <role-name>admin</role-name>
     </security-role>
@@ -79,35 +89,33 @@
       <role-name>user</role-name>
     </security-role>
 
-    <security-constraint>
+    <!-- <security-constraint>
       <web-resource-collection>
          <web-resource-name>MockExam</web-resource-name>
-         <!-- <url-pattern>/admin/*</url-pattern> -->
          <url-pattern>/Introduction.jsp</url-pattern>
             <http-method>GET</http-method>
             <http-method>POST</http-method>
       </web-resource-collection>
       
       <auth-constraint>
-         <!-- <role-name>admin</role-name> -->
+         <role-name>admin</role-name>
          <role-name>user</role-name>
       </auth-constraint>
 
-      </security-constraint>
+      </security-constraint> -->
 
 
     <security-constraint>
       <web-resource-collection>
          <web-resource-name>MockExam</web-resource-name>
-         <url-pattern>/admin/*</url-pattern>
-         <!-- <url-pattern>/Introduction.jsp</url-pattern> -->
+         <url-pattern>/Login</url-pattern>
             <http-method>GET</http-method>
             <http-method>POST</http-method>
       </web-resource-collection>
       
       <auth-constraint>
          <role-name>admin</role-name>
-         <!-- <role-name>user</role-name> -->
+         <role-name>user</role-name>
       </auth-constraint>
 
       </security-constraint>
