--- a/mockexam/src/main/webapp/WEB-INF/web.xml
+++ b/mockexam/src/main/webapp/WEB-INF/web.xml
@@ -53,6 +53,15 @@
 <servlet>  
 <servlet-name>upd</servlet-name>  
 <servlet-class>com.lxisoft.control.UpdateServlet</servlet-class>  
+</servlet> 
+<servlet-mapping>  
+<servlet-name>slct</servlet-name>  
+<url-pattern>/select</url-pattern>  
+</servlet-mapping>
+
+<servlet>  
+<servlet-name>slct</servlet-name>  
+<servlet-class>com.lxisoft.control.SelectServlet</servlet-class>  
 </servlet>  
   
 <servlet-mapping>  
@@ -63,19 +72,10 @@
   <security-constraint>
     <web-resource-collection>
       <web-resource-name>mockexam</web-resource-name>
-      <url-pattern>/AdminMenu.jsp</url-pattern>
+      <url-pattern>/select</url-pattern>
     </web-resource-collection>
     <auth-constraint>
       <role-name>admin</role-name>
-    </auth-constraint>
-  </security-constraint>
-
-  <security-constraint>
-    <web-resource-collection>
-      <web-resource-name>mockexam</web-resource-name>
-      <url-pattern>/page1.jsp</url-pattern>
-    </web-resource-collection>
-    <auth-constraint>
       <role-name>user</role-name>
     </auth-constraint>
   </security-constraint>
@@ -90,25 +90,4 @@
       <form-error-page>/login_failure.jsp</form-error-page>
     </form-login-config>
   </login-config> 
-  <!-- <security-constraint>
-    <web-resource-collection>
-      <web-resource-name>mockexam</web-resource-name>
-      <url-pattern>/page1.jsp</url-pattern>
-    </web-resource-collection>
-    <auth-constraint>
-      <role-name>user</role-name>
-      <role-name>user1</role-name>
-    </auth-constraint>
-  </security-constraint>
-  <security-role>
-    <role-name>user</role-name>
-    <role-name>user1</role-name>
-  </security-role>
-  <login-config>
-    <auth-method>FORM</auth-method>
-    <form-login-config>
-      <form-login-page>/page0.jsp</form-login-page>
-      <form-error-page>/login_failure1.jsp</form-error-page>
-    </form-login-config>
-  </login-config> 
-</web-app>  --> 
+</web-app>  
