--- a/MockExam/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/src/main/webapp/WEB-INF/web.xml
@@ -97,55 +97,38 @@
    </login-config> -->
 
 
-<servlet>  
-<servlet-name>select</servlet-name>  
-<servlet-class>com.lxisoft.Control.Select</servlet-class>  
-</servlet>  
-  
 <servlet-mapping>  
-<servlet-name>select</servlet-name>  
-<url-pattern>/SelectServlet</url-pattern>  
+<servlet-name>login</servlet-name>  
+<url-pattern>/LoginServlet</url-pattern>  
 </servlet-mapping>
 
-
-   <security-role>
-    <role-name>admin</role-name>
-    </security-role>
-
-     <security-role>
-    <role-name>user</role-name>
-    </security-role>
-
- <security-constraint>
- 	<display-name>Admin</display-name>
+<servlet>  
+<servlet-name>login</servlet-name>  
+<servlet-class>com.lxisoft.Control.LoginServlet</servlet-class>  
+</servlet>  
+  
+  <security-constraint>
     <web-resource-collection>
-    <web-resource-name>MockExam</web-resource-name>
-    <url-pattern>/Admin.jsp</url-pattern>
-    <url-pattern>/Instruction.jsp</url-pattern>
-    <http-method>GET</http-method>
-    <http-method>POST</http-method>
+      <web-resource-name>MockExam</web-resource-name>
+      <url-pattern>/LoginServlet</url-pattern>
     </web-resource-collection>
-        
+
     <auth-constraint>
-   	<role-name>admin</role-name>
-   	<role-name>user</role-name>
+      <role-name>admin</role-name>
+      <role-name>user</role-name>
     </auth-constraint>
-    </security-constraint>
-         
-     
-    <login-config>
+  </security-constraint>
+
+  <security-role>
+    <role-name>admin</role-name>
+    <role-name>user</role-name>
+  </security-role>
+
+  <login-config>
     <auth-method>FORM</auth-method>
     <form-login-config>
-    <form-login-page>/Login.jsp</form-login-page>
-    <form-error-page>/Error.jsp</form-error-page>
+      <form-login-page>/Login.jsp</form-login-page>
+      <form-error-page>/Error.jsp</form-error-page>
     </form-login-config>
-   </login-config>
-
+  </login-config> 
 </web-app>  
-
- 
-
-
-  
-
- 
