http://jira.bytatech.com:8080/browse/IN-7421

--- a/mockexam/src/main/webapp/WEB-INF/web.xml
+++ b/mockexam/src/main/webapp/WEB-INF/web.xml
@@ -55,19 +55,28 @@
 <servlet-class>com.lxisoft.control.UpdateServlet</servlet-class>  
 </servlet> 
 <servlet-mapping>  
-<servlet-name>slct</servlet-name>  
-<url-pattern>/select</url-pattern>  
-</servlet-mapping>
+<servlet-name>upd</servlet-name>  
+<url-pattern>/update</url-pattern>  
+</servlet-mapping> 
 
 <servlet>  
 <servlet-name>slct</servlet-name>  
 <servlet-class>com.lxisoft.control.SelectServlet</servlet-class>  
-</servlet>  
-  
+</servlet>
 <servlet-mapping>  
-<servlet-name>upd</servlet-name>  
-<url-pattern>/update</url-pattern>  
+<servlet-name>slct</servlet-name>  
+<url-pattern>/select</url-pattern>  
+</servlet-mapping> 
+
+<servlet>  
+<servlet-name>sgn</servlet-name>  
+<servlet-class>com.lxisoft.control.SignupServlet</servlet-class>  
+</servlet>
+<servlet-mapping>  
+<servlet-name>sgn</servlet-name>  
+<url-pattern>/signup</url-pattern>  
 </servlet-mapping>  
+
 <display-name>Tomcat7FormBasedJAAS</display-name>
   <security-constraint>
     <web-resource-collection>
