--- a/example/src/main/webapp/WEB-INF/web.xml
+++ b/example/src/main/webapp/WEB-INF/web.xml
@@ -62,6 +62,14 @@
          <url-pattern>/delete</url-pattern> 
     </servlet-mapping>
        
+         <servlet> 
+         <servlet-name>Login</servlet-name> 
+         <servlet-class>com.lxisoft.control.Login</servlet-class> 
+    </servlet> 
+    <servlet-mapping> 
+         <servlet-name>Login</servlet-name> 
+         <url-pattern>/login</url-pattern> 
+    </servlet-mapping>
 
 
         <display-name>Tomcat7FormBasedJAAS</display-name>
