--- a/MockExam/pom.xml
+++ b/MockExam/pom.xml
@@ -12,8 +12,29 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring.version>5.1.0.RELEASE</spring.version>
-    </properties>
-  <dependencies>
+    <!-- </properties>
+
+
+<properties> -->
+    <servlet.version>3.1.0</servlet.version>
+   
+</properties>
+ 
+<dependencies>
+    <dependency>
+        <groupId>jstl</groupId>
+        <artifactId>jstl</artifactId>
+     
+    </dependency>
+  <dependency>
+  <groupId>javax.servlet</groupId>
+  <artifactId>jstl</artifactId>
+  <version>1.2</version>
+  </dependency>
+<!-- </dependencies>
+
+
+  <dependencies> -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -27,7 +48,11 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+  <groupId>taglibs</groupId>
+  <artifactId>standard</artifactId>
+  <version>1.1.2</version>
+</dependency>
            <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
