--- a/mockexam/pom.xml
+++ b/mockexam/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.lxisoft</groupId>
-  <artifactId>mockexam</artifactId>
+  <artifactId>example</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>mockexam Maven Webapp</name>
+  <name>example  Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -50,21 +50,15 @@
           <url>http://localhost:8080/manager/text</url>
           <username>admin</username>
           <password>password</password>
-          <path>/mockexam</path>
+          <path>/example</path>
         </configuration>
       </plugin>
           <plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.6</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                        </manifest>
-                    </archive>
-                </configuration>
+                
             </plugin>
     </plugins>
-    <finalName>mockexam</finalName>
+    <finalName>example</finalName>
   </build>
 </project>
