http://jira.bytatech.com:8080/browse/IN-7562

--- a/MockExam/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/src/main/webapp/WEB-INF/web.xml
@@ -89,22 +89,6 @@
       <role-name>user</role-name>
     </security-role>
 
-    <!-- <security-constraint>
-      <web-resource-collection>
-         <web-resource-name>MockExam</web-resource-name>
-         <url-pattern>/Introduction.jsp</url-pattern>
-            <http-method>GET</http-method>
-            <http-method>POST</http-method>
-      </web-resource-collection>
-      
-      <auth-constraint>
-         <role-name>admin</role-name>
-         <role-name>user</role-name>
-      </auth-constraint>
-
-      </security-constraint> -->
-
-
     <security-constraint>
       <web-resource-collection>
          <web-resource-name>MockExam</web-resource-name>
@@ -123,7 +107,7 @@
       <login-config>
       <auth-method>FORM</auth-method>
         <form-login-config>
-           <form-login-page>/Login.jsp</form-login-page>
+           <form-login-page>/Sample1.jsp</form-login-page>
            <form-error-page>/login_failure.jsp</form-error-page>
         </form-login-config>
       </login-config>
