--- a/mockexam/pom.xml
+++ b/mockexam/pom.xml
@@ -7,6 +7,15 @@
   <version>1.0-SNAPSHOT</version>
   <name>example  Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
+   <properties>
+        <!-- https://maven.apache.org/general.html#encoding-warning -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <spring.version>5.1.0.RELEASE</spring.version>
+    </properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
