--- a/mockexam/pom.xml
+++ b/mockexam/pom.xml
@@ -2,20 +2,19 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.lxisoft</groupId>
-  <artifactId>example</artifactId>
+  <artifactId>MockExam</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>example  Maven Webapp</name>
+  <name>MockExam Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  
-   <properties>
+
+  <properties>
         <!-- https://maven.apache.org/general.html#encoding-warning -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring.version>5.1.0.RELEASE</spring.version>
     </properties>
-
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -23,51 +22,37 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-  
-   <dependency>
-  <groupId>javax.servlet</groupId>
-  <artifactId>servlet-api</artifactId>
-  <version>2.5</version>
-  <scope>provided</scope>
-  </dependency>
-
-  <dependency>
-    <groupId>javax.servlet</groupId>
-        <artifactId>jstl</artifactId>
-        <version>1.2</version>
-  </dependency>
 
 <dependency>
-    <groupId>mysql</groupId>
-    <artifactId>mysql-connector-java</artifactId>
-    <version>5.1.6</version>
-</dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Some containers like Tomcat don't have jstl library -->
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+            <scope>provided</scope>
+        </dependency>
 
   </dependencies>
   <build>
-   <plugins>
-     <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.0</version>
-                </plugin>
-      <plugin>
-        <groupId>org.apache.tomcat.maven</groupId>
-        <artifactId>tomcat7-maven-plugin</artifactId>
-        <version>2.2</version>
-        <configuration>
-          <url>http://localhost:8080/manager/text</url>
-          <username>admin</username>
-          <password>password</password>
-          <path>/example</path>
-        </configuration>
-      </plugin>
-          <plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.6</version>
-                
-            </plugin>
-    </plugins>
-    <finalName>example</finalName>
+    <finalName>MockExam</finalName>
+    <plugins>
+    <plugin>
+      <groupId>org.apache.tomcat.maven</groupId>
+      <artifactId>tomcat7-maven-plugin</artifactId>
+      <version>2.2</version>
+      <configuration>
+      <url>http://localhost:8080/manager/text</url>
+      <username>admin</username>
+      <password>password</password>
+      <path>/MockExam </path>
+      </configuration>
+    </plugin>
+</plugins>
   </build>
 </project>
