--- a/MockExam/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/src/main/webapp/WEB-INF/web.xml
@@ -81,6 +81,13 @@
     <url-pattern>/Login</url-pattern>
   </servlet-mapping>
 
+  <jsp-config>
+  <jsp-property-group>
+    <url-pattern>*.jsp</url-pattern>
+    <page-encoding>UTF-8</page-encoding>
+  </jsp-property-group>
+  </jsp-config>
+
     <security-role>
       <role-name>admin</role-name>
     </security-role>
