http://jira.bytatech.com:8080/browse/IN-7792

--- a/example/src/main/webapp/WEB-INF/web.xml
+++ b/example/src/main/webapp/WEB-INF/web.xml
@@ -82,6 +82,16 @@
 
 
   <servlet>
+    <servlet-name>OptionServlet</servlet-name>
+    <servlet-class>com.lxisoft.Controler.OptionServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>OptionServlet</servlet-name>
+    <url-pattern>/Option</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
     <servlet-name>Register</servlet-name>
     <servlet-class>com.lxisoft.control.Register</servlet-class>
   </servlet>
