--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -8,4 +8,36 @@
 		<servlet-name>Add</servlet-name>
 		<url-pattern>/addContact</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>View</servlet-name>
+		<servlet-class>com.lxisoft.servlet.ViewContactServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>View</servlet-name>
+		<url-pattern>/viewContact</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>Edit</servlet-name>
+		<servlet-class>com.lxisoft.servlet.EditContactServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Edit</servlet-name>
+		<url-pattern>/editContact</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>Delete</servlet-name>
+		<servlet-class>com.lxisoft.servlet.DeleteContactServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Delete</servlet-name>
+		<url-pattern>/deleteContact</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>Update</servlet-name>
+		<servlet-class>com.lxisoft.servlet.UpdateContactServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Update</servlet-name>
+		<url-pattern>/updateContact</url-pattern>
+	</servlet-mapping>
 </web-app>	
