--- a/MockExam/my-app/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/my-app/src/main/webapp/WEB-INF/web.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0"?>
 <web-app>
-
+	<servlet>
+		<servlet-name>add</servlet-name>
+		<servlet-class>com.mockexam.servlet.AddServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>add</servlet-name>
+		<url-pattern>/add</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>read</servlet-name>
+		<servlet-class>com.mockexam.servlet.ReadServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>read</servlet-name>
+		<url-pattern>/read</url-pattern>
+	</servlet-mapping>
 </web-app>
