--- a/MockExam/mockexam-app/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/mockexam-app/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,7 @@
 		<servlet-name>read</servlet-name>
 		<url-pattern>/readExamData</url-pattern>
 	</servlet-mapping>
+	
 	<servlet>
 		<servlet-name>Answer</servlet-name>
 		<servlet-class>com.mockexam.servlet.GetAnswerServlet</servlet-class>
@@ -17,6 +18,7 @@
 		<servlet-name>Answer</servlet-name>
 		<url-pattern>/getAnswer</url-pattern>
 	</servlet-mapping>
+	
 	<servlet>
 		<servlet-name>Controller</servlet-name>
 		<servlet-class>com.mockexam.servlet.ExamControllerServlet</servlet-class>
@@ -25,4 +27,43 @@
 		<servlet-name>Controller</servlet-name>
 		<url-pattern>/examController</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Result</servlet-name>
+		<servlet-class>com.mockexam.servlet.ResultServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Result</servlet-name>
+		<url-pattern>/viewResult</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>login</servlet-name>
+		<servlet-class>com.mockexam.servlet.LoginValidateServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>login</servlet-name>
+		<url-pattern>/userLogin</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>lRegistration</servlet-name>
+		<servlet-class>com.mockexam.servlet.RegisterUserServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Registration</servlet-name>
+		<url-pattern>/userRegistration</url-pattern>
+	</servlet-mapping>
+	
+
+	<jsp-config>
+      <jsp-property-group>
+        <url-pattern>*.jsp</url-pattern>
+        <trim-directive-whitespaces>true</trim-directive-whitespaces>
+      </jsp-property-group>
+    </jsp-config>
+    <init-param>
+    <param-name>trimSpaces</param-name>
+    <param-value>true</param-value>
+</init-param>
 </web-app>
