--- a/MockExam/mockexam-app/pom.xml
+++ b/MockExam/mockexam-app/pom.xml
@@ -26,11 +26,13 @@
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.48</version>
+      <version>8.0.19</version>
     </dependency>
+
   </dependencies>
   <build>
     <finalName>mockexam</finalName>
@@ -74,6 +76,15 @@
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.2.1</version>
+            <configuration>
+               <outputDirectory>/home/rahul/apache-tomcat-8.5.54/webapps</outputDirectory>
+             <!-- Example of Tomcat webapps location :D:\tomcat\webapps\ -->
+            </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
