--- a/MockExam/mockexam-app/pom.xml
+++ b/MockExam/mockexam-app/pom.xml
@@ -75,6 +75,15 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+            <url>http://localhost:8080/manager/text</url>
+            <server>localhost</server>
+        </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
