--- a/MockExam/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,26 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
 
+  <security-constraint>
+		<web-resource-collection>
+			<web-resource-name>secured</web-resource-name>
+			<url-pattern>/protected/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+	</security-constraint>
+	<security-role>
+		<role-name>admin</role-name>
+	</security-role>
+	<login-config>
+		<auth-method>FORM</auth-method>
+		<form-login-config>
+			<form-login-page>/admin.jsp</form-login-page>
+			<form-error-page>/login_failure.jsp</form-error-page>
+		</form-login-config>
+	</login-config>
+
   <servlet>
 		<servlet-name>Add</servlet-name>
 		<servlet-class>com.lxisoft.servlet.AddServlet</servlet-class>
