http://jira.bytatech.com:8080/browse/IN-7115

--- a/MockExam/maven/MockExam/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/maven/MockExam/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
 
- <!--  <security-constraint>
+  <security-constraint>
 		<web-resource-collection>
 			<web-resource-name>MockExam</web-resource-name>
 			<url-pattern>/logining</url-pattern>
@@ -32,7 +32,7 @@
 			<form-login-page>/login.jsp</form-login-page>
 			<form-error-page>/login_failure.jsp</form-error-page>
 		</form-login-config>
-	</login-config> -->
+	</login-config>
 
   <servlet>
 		<servlet-name>Add</servlet-name>
@@ -68,7 +68,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
-		<url-pattern>/logining</url-pattern>
+		<url-pattern>/userLogin</url-pattern>
 	</servlet-mapping>
 
 
@@ -78,7 +78,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Delete</servlet-name>
-		<url-pattern>/problemDelete</url-pattern>
+		<url-pattern>/questionDelete</url-pattern>
 	</servlet-mapping>
 
  <servlet>
