http://jira.bytatech.com:8080/browse/IN-9159

--- a/MockExam/maven/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/maven/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,12 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
+<?xml version="1.0" encoding="UTF-8"?>
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+  <display-name>Mock Exam</display-name>
+  <servlet>
+    <servlet-name>add</servlet-name>
+    <servlet-class>com.lxisoft.controller.AddQuestionServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>add</servlet-name>
+    <url-pattern>/add</url-pattern>
+  </servlet-mapping>  
 </web-app>
