http://jira.bytatech.com:8080/browse/IN-9252

--- a/MockExam/maven/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/maven/src/main/webapp/WEB-INF/web.xml
@@ -9,9 +9,8 @@
     <servlet-name>add</servlet-name>
     <url-pattern>/add</url-pattern>
   </servlet-mapping>
-
-
-   <servlet>
+  
+    <servlet>
     <servlet-name>DeleteQuestion</servlet-name>
     <servlet-class>com.lxisoft.controller.DeleteQuestionServlet</servlet-class>
   </servlet>
@@ -20,8 +19,7 @@
     <url-pattern>/DeleteQuestion</url-pattern>
   </servlet-mapping>
   
-
-   <servlet>
+  <servlet>
     <servlet-name>UpdateQuestion</servlet-name>
     <servlet-class>com.lxisoft.controller.UpdateQuestionServlet</servlet-class>
   </servlet>
@@ -29,5 +27,40 @@
     <servlet-name>UpdateQuestion</servlet-name>
     <url-pattern>/update</url-pattern>
   </servlet-mapping>
-    
+  
+  <servlet>
+    <servlet-name>SaveUser</servlet-name>
+    <servlet-class>com.lxisoft.controller.UserSaveServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SaveUser</servlet-name>
+    <url-pattern>/save</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>SetAnswere</servlet-name>
+    <servlet-class>com.lxisoft.controller.SetMarkServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SetAnswere</servlet-name>
+    <url-pattern>/setMark</url-pattern>
+  </servlet-mapping>
+  
+   <servlet>
+    <servlet-name>printResult</servlet-name>
+    <servlet-class>com.lxisoft.controller.PrintResultServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>printResult</servlet-name>
+    <url-pattern>/viewResult</url-pattern>
+  </servlet-mapping>
+    <servlet>
+    <servlet-name>SetExam</servlet-name>
+    <servlet-class>com.lxisoft.controller.ExamSetupServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SetExam</servlet-name>
+    <url-pattern>/SetExam</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
