http://jira.bytatech.com:8080/browse/IN-13458

--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -21,4 +21,41 @@
 </servlet-mapping>
 
 
+<servlet>
+<servlet-name>UpdateContactServlet</servlet-name>
+<servlet-class>com.lxisoft.servlet.UpdateContactServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>UpdateContactServlet</servlet-name>
+<url-pattern>/UpdateContactServlet</url-pattern>
+</servlet-mapping>
+
+
+<servlet>
+<servlet-name>DeleteContactServlet</servlet-name>
+<servlet-class>com.lxisoft.servlet.DeleteContactServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>DeleteContactServlet</servlet-name>
+<url-pattern>/DeleteContactServlet</url-pattern>
+</servlet-mapping>
+
+<servlet>
+<servlet-name>ContactDetailsServlet</servlet-name>
+<servlet-class>com.lxisoft.servlet.ContactDetailsServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>ContactDetailsServlet</servlet-name>
+<url-pattern>/ContactDetailsServlet</url-pattern>
+</servlet-mapping>
+
+<servlet>
+<servlet-name>SearchContactServlet</servlet-name>
+<servlet-class>com.lxisoft.servlet.SearchContactServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>SearchContactServlet</servlet-name>
+<url-pattern>/SearchContactServlet</url-pattern>
+</servlet-mapping>
+
 </web-app>
